# t3nets

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.router  README.md  THIRD_PARTY_LICENSES  VERSION.md  docker-compose.ollama.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json  plan.md  settings.local.json
.github/: FUNDING.yml
.github/workflows/: deploy-sherpii.yml  publish-sdk.yml
adapters/aws/: __init__.py  admin_api.py  async_dispatch.py  auth_api.py  auth_middleware.py  bedrock_provider.py  bootstrap.py  channel_resolvers.py  dynamo_rule_store.py  dynamo_training_store.py  dynamodb_conversation_store.py  dynamodb_tenant_store.py  event_bridge_bus.py  lambda_handler.py  pending_requests.py  platform_api.py  practice_publish.py  result_router.py  s3_blob_store.py  secrets_manager.py  server.py  server_helpers.py  sqs_poller.py  webhook_registration.py  ws_connections.py
adapters/azure/: README.md
adapters/gcp/: README.md
adapters/local/: __init__.py  admin_api.py  anthropic_provider.py  bootstrap.py  callback.html  chat.html  dev_server.py  direct_bus.py  env_secrets.py  file_blob_store.py  file_store.py  health.html  local_pending_store.py  login.html  onboard.html  platform.html  platform_api.py  server_helpers.py  settings.html  sqlite_rule_store.py  sqlite_store.py  sqlite_tenant_store.py  sqlite_training_store.py  theme.css  theme.js  training.html
adapters/ollama/: provider.py
adapters/shared/: __init__.py  base_handler.py  multi_provider.py  server_utils.py
adapters/shared/handlers/: __init__.py  chat.py  (+7 more)
agent/: sse.py
agent/channels/: base.py  dashboard.py  teams.py  teams_auth.py  telegram.py  whatsapp.py
agent/errors/: __init__.py  catalog.py  handler.py  models.py
agent/interfaces/: __init__.py  ai_provider.py  blob_store.py  conversation_store.py  event_bus.py  rule_store.py  secrets_provider.py  tenant_store.py  training_store.py
agent/models/: __init__.py  ai_models.py  context.py  message.py  practice.py  tenant.py
agent/practices/: __init__.py  assets.py  deployer.py  installer.py  registry.py
agent/router/: compiled_engine.py  models.py  router.py  rule_engine_builder.py  rule_router.py
agent/skills/: registry.py
dashboard/onboard/: index.html  package.json  vite.config.mjs
docs/: PLAN-T3NETS-CHANGES_for_voiceher.md  README.md  ROADMAP-INTERIM-SHERPII.md  ROADMAP.md  ai-models-pricing.md  aws-infrastructure.md  decision-log.md  dynamodb-schema.md  hybrid-routing.md  local-development.md  phase-3b-architecture.html  phase-3b-architecture.mermaid  plan-ai-generated-rule-engine.md  plan-invitation-signup-flow.md  plan-ollama-integration.md  plan-phase-3b-async-skills.md  plan-practices-sdk.md  plan-practices-team-experience-bundles.md  plan-server-refactor.md  practice-development.md
docs/architecure/: t3nets-architecture.docx  t3nets-architecture.js  t3nets-auth-and-tenancy.docx
handoffs/: 001-fix-release-notes-skill.md  002-cognito-auth-and-tenant-resolution.md  003-onboarding-wizard.md  004-idp-agnostic-auth-phase1.md  005-second-tenant-seed-and-isolation.md  006-fix-auth-api-gateway-routes.md  007-password-reset-flow.md  008-tenant-name-in-navbar.md  009-settings-api-and-skill-toggles.md  010-tabbed-settings-integration-config.md  011-teams-channel-adapter.md  012-telegram-channel-adapter.md  013-phase-3b-design-review.md  014-phase-3b-implementation.md  015-websocket-api-gateway.md  016-platform-admin-tenant-management.md  017-asgi-migration-and-mypy.md  018-ai-generated-rule-engine-plan.md  019-practices-team-experience-bundles-plan.md  020-phase-5a-ai-generated-rule-engine.md  021-phase-5c-ollama-integration.md  022-whatsapp-channel-telegram-fixes.md  023-phase-6c-and-6d-close-sdk-on-pypi.md  024-phase-7-server-slim-steps-1-5.md  025-phase-7-server-slim-step-6.md  026-whatsapp-voice-and-routing-overrides.md  027-s3-lifecycle-and-sherpii-interim-roadmap.md
infra/aws/: README.md  backend.tf  github_oidc.tf  import-routes.sh  main.tf  outputs.tf  variables.tf
proto/: t3nets_practice.proto
scripts/: build_lambda_base.sh  deploy.sh  seed.sh
sdk/: CHANGELOG.md  README.md  pyproject.toml
sdk/t3nets_sdk/: __init__.py  contracts.py  manifest.py
sdk/t3nets_sdk/cli/: __init__.py  init.py  main.py  package.py  run_local.py  validate.py
sdk/t3nets_sdk/interfaces/: __init__.py  blob_store.py  conversation_store.py  event_bus.py  secrets_provider.py
sdk/t3nets_sdk/models/: __init__.py  context.py  message.py  tenant.py
sdk/t3nets_sdk/testing/: __init__.py  context.py  mock_blob_store.py  mock_conversation_store.py  mock_event_bus.py  mock_secrets_provider.py
tests/: test_async_skills.py  test_audio_response.py  test_blob_store.py  test_callback_endpoint.py  test_chat_tags_regression.py  test_compiled_engine.py  test_error_handler.py  test_ollama_provider.py  test_onboarding.py  test_practice_registry.py  test_release_notes.py  test_routing_overrides.py  test_run_local.py  test_sdk_cli.py  test_sdk_contracts.py  test_sdk_manifest.py  test_sdk_testing.py  test_skill_registry_adapter.py  test_sse.py  test_teams_adapter.py  test_telegram_adapter.py  test_tenant_isolation.py  test_whatsapp_auth.py
(+41 files in other folders)
