[project]
name = "t3nets"
version = "0.2.0"
description = "Open-source, multi-tenant AI agent platform. Connect your tools, talk through your channels."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Ellie Portugali", email = "ellieportugali@gmail.com"},
]

dependencies = [
    "pyyaml>=6.0",
    # t3nets-sdk is in this monorepo at ./sdk during early development.
    # Install it editable alongside the platform:
    #     pip install -e ./sdk && pip install -e ".[local,dev]"
    # It will move to a published PyPI dependency once the surface stabilizes.
]

[project.optional-dependencies]
aws = [
    "boto3>=1.35",
    "anthropic[bedrock]>=0.40",
]
local = [
    "anthropic>=0.40",
    "starlette>=0.41",
    "uvicorn[standard]>=0.32",
]
dashboard = [
    # Dashboard is a separate React app — no Python deps
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
include = ["agent*", "adapters*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
# t3nets-sdk lives at ./sdk in this monorepo. Setuptools' modern editable
# install uses a meta-path finder that mypy can't walk, so point it at the
# source tree directly.
mypy_path = "sdk"
